--- a/prenom.ui
+++ b/prenom.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Super Prénom!</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resource.qrc">
+    <normaloff>:/all/icon.png</normaloff>:/all/icon.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">QMainWindow {background-image: url(:/all/nounours_cropped.png)}</string>
   </property>
