--- a/prenom.ui
+++ b/prenom.ui
@@ -32,7 +32,7 @@
          </font>
         </property>
         <property name="text">
-         <string>prénom1</string>
+         <string/>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -67,7 +67,7 @@
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>prénom2</string>
+         <string/>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
