--- a/prenom.ui
+++ b/prenom.ui
@@ -109,11 +109,29 @@
      <x>0</x>
      <y>0</y>
      <width>335</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>Fichier</string>
+    </property>
+    <addaction name="actionResults"/>
+    <addaction name="actionQuit"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionResults">
+   <property name="text">
+    <string>Voir résultats</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quitter</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="resource.qrc"/>
