make results condorcet and global

--- a/results.ui
+++ b/results.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>290</width>
+    <width>471</width>
     <height>411</height>
    </rect>
   </property>
@@ -40,7 +40,7 @@
       <bool>true</bool>
      </property>
      <property name="columnCount">
-      <number>2</number>
+      <number>3</number>
      </property>
      <attribute name="horizontalHeaderCascadingSectionResizes">
       <bool>true</bool>
@@ -48,12 +48,11 @@
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
      </attribute>
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
-     </attribute>
-     <attribute name="horizontalHeaderCascadingSectionResizes">
-      <bool>true</bool>
-     </attribute>
+     <column>
+      <property name="text">
+       <string>Rang</string>
+      </property>
+     </column>
      <column>
       <property name="text">
        <string>Prénom</string>
